static/css/style.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: #eeeeee;
    color: #424242;
  }

  main {
    flex: 1 0 auto;
  }

/*------------Navbar-----------*/

.brand-logo {
    letter-spacing: 1px;
}

.dropdown-button {
    letter-spacing: 1px;
}

/*------------Index Page-----------*/

@media only screen and (max-width: 600px) {
    .parallax-container {
        height: 130px;
    }
}

.parallax-container {
    width: 100%;
}

.welcome-para {
    font-size: 1.5rem;
}

@media (min-width: 601px) {
    .search-col {
        padding-left: 0px !important;
    }
    .share-col {
        padding-right: 0px !important;
    }
}

.welcome-card {
    text-align: center;
}

.card .card-content {
    padding: 50px;
}

.card .card-content p {
    margin-top: 20px;
}

.card-title a {
    margin-top: 50px;
    font-size: 1.25rem;
    color: #616161 !important;
    
}

.card-title .material-icons {
    font-size: 3rem;
    color: #fdd835;
}

.card-title .material-icons:hover {
    color: #616161 !important;
}

.card-title a:hover {
    color: #616161 !important;
    font-size: 1.3rem;
}

.carousel {
    height: 300px !important;
}


/*------------Tips Page-----------*/

.tip-card {
    margin: 20px;
    text-align: center;
}

.tip-content {
    padding: 30px 10px !important;
}

@media (min-width: 601px) and (max-width: 992px) {
    .tip-content {
        height: 100px;
        padding: 20px 10px !important;
    }
    .card-title {
        line-height: 24px !important;
    }
}

@media (min-width: 993px) {
    .tip-content {
        padding: 20px 10px !important;
    }
}

.tech-row {
    margin-bottom: 0;
}

.tech-col {
    padding: 20px !important;
}

/*------------Headers-----------*/

.page-head {
    text-align: center;
    letter-spacing: 1px;
    padding: 30px;
}

/*------------Recipes Page-----------*/
.filter-form {
    padding: 20px;
}

ul.dropdown-content.select-dropdown li span {
    color: #616161;
}

.collapsible-header {
    margin-bottom: 20px;
    background-color: #616161;
    color: #eeeeee;
}

.recipe-name-col {
    font-size: 18px;
    letter-spacing: .5px;
}

.collapsible-body {
    padding: 15px;
}

.add-recipe-row {
    margin-bottom: 50px;
}

@media (max-width: 575.98px) {
    .btn-col {
    margin-top: 1.5rem;
}
}
/*------------Add Recipe Page-----------*/

.img-icon {
    padding-left: 0px !important;
}

.img-path {
    padding-left: 0px !important;
}

@media (max-width: 575.98px) {
    .img-path {
    margin-left: 2.5rem;
}
}

.dropdown-content li:hover, .dropdown-content li.active, .dropdown-content li.selected {
     border: 2px solid #fdd835;
     background-color: #fdd835;
}

.lever {
    margin-left: 0px !important;
}

.switch label input[type=checkbox]:checked+.lever {
    background-color: #fdd835 !important;
}

.lever::after {
    background: #fdd835 !important;
}

.input-field .prefix.active {
    color: #fdd835 !important;
}

input:focus {
  border-bottom: 1px solid #fdd835 !important;
  box-shadow: 0 1px 0 0 #fdd835 !important;
}

.add-recipe-form label.active {
  color: #fdd835 !important;
}

/*------------Edit Recipe Page-----------*/

.input-field label.active::after {
    color: #9e9e9e;
}

input[type=text]:not(.browser-default):focus:not([readonly])+label, input[type=number]:not(.browser-default):focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label  {
    color: #fdd835 !important;
}

input.valid:not([type]), input.valid:not([type]):focus, input[type=text].valid:not(.browser-default), input[type=text].valid:not(.browser-default):focus, input[type=password].valid:not(.browser-default), input[type=password].valid:not(.browser-default):focus, input[type=email].valid:not(.browser-default), input[type=email].valid:not(.browser-default):focus, input[type=url].valid:not(.browser-default), input[type=url].valid:not(.browser-default):focus, input[type=time].valid:not(.browser-default), input[type=time].valid:not(.browser-default):focus, input[type=date].valid:not(.browser-default), input[type=date].valid:not(.browser-default):focus, input[type=datetime].valid:not(.browser-default), input[type=datetime].valid:not(.browser-default):focus, input[type=datetime-local].valid:not(.browser-default), input[type=datetime-local].valid:not(.browser-default):focus, input[type=tel].valid:not(.browser-default), input[type=tel].valid:not(.browser-default):focus, input[type=number].valid:not(.browser-default), input[type=number].valid:not(.browser-default):focus, input[type=search].valid:not(.browser-default), input[type=search].valid:not(.browser-default):focus, textarea.materialize-textarea.valid, textarea.materialize-textarea.valid:focus, .select-wrapper.valid>input.select-dropdown {
    border-bottom: 1px solid #b2b2b2;
    -webkit-box-shadow: 0 1px 0 0 #b2b2b2;
    box-shadow: 0 1px 0 0 #b2b2b2;
}

textarea.materialize-textarea {
    overflow-y: scroll;
    border-bottom: 1px #b2b2b2 !important;
    box-shadow: 0 1px 0 0 #b2b2b2 !important;
}

textarea.materialize-textarea:focus {
    overflow-y: scroll;
    border-bottom: 1px solid #fdd835 !important;
    box-shadow: 0 1px 0 0 #fdd835 !important;
}

/*------------View Recipe Page-----------*/

.card-panel {
    height: 207.3px;
}

img {
    width: 100%;
    
}

.recipe_description {
    margin: 0px 0px 30px 0px;
    font-size: 20px;
}

.info-col {
    margin-left: 10px;
}

.suit-col {
    padding-left: 35px;
}

/*------------ Categories-----------*/

.add-cat-row {
    margin-bottom: 40px;
}

.cat-meals {
    margin-right: 20px;
}

.cat-cuis {
    margin-left: 20px;
}

.cat-header {
    text-align: center;
    margin-bottom: 20px;
}



/*------------Edit Categories-----------*/
.edit-cat-row {
    margin-top: 20px;
}

/*------------Buttons-----------*/

.btn {
    background-color: #fdd835;
    font-weight: bold;
    letter-spacing: 1px;
}

.btn:hover {
    background-color: #616161;
    color: #fdd835;
}

.btn-filter {
    margin-top: 25px; 
    width: 10rem;
}

.btn-img {
    width: 12rem;
}

.btn_small{
    height: 24px;
    width: 100px;
    line-height: 24px;
    margin: 5px 5px;
    padding: 0 0.5em;
} 

.btn-del {
    margin: 0px 0px 0px 5px;
}

/*------------Footer-----------*/
.page-footer {
    padding-top: 0px;
}

.footer-row {
    margin-bottom: 0px;
    padding: 10px 0px;
}

footer ul li{
  display: inline;
}

.social-links li a i {
    font-size: 20px;
    font-weight: 400;
    line-height: 25px;
    letter-spacing: 3px;
    margin-right: 5px;
}

.social-links li a i:hover {
    font-weight: bolder;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.footer-copyright {
    text-align: center;
}

